Fixes ad tests
